# django-phonenumber-field

./: .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  .travis_setup  AUTHORS  CHANGELOG.rst  Dockerfile-tox  MANIFEST.in  Makefile  README.rst  check-translations  docker-compose.yml  docker-entrypoint.sh  formfields.py  modelfields.py  phonenumber.py  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tests.py  tox.ini  validators.py  widgets.py
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  check.yml  release.yml  test.yml
docs/: conf.py  index.rst  phonenumbers.rst  reference.rst  requirements.txt  settings.py
locale/az/LC_MESSAGES/: django.mo  django.po
locale/cs/LC_MESSAGES/: django.mo
locale/da/LC_MESSAGES/: django.po
locale/de/LC_MESSAGES/: django.mo  django.po
locale/eo/LC_MESSAGES/: django.mo  django.po
locale/fi/LC_MESSAGES/: django.mo
locale/fr/LC_MESSAGES/: django.po
locale/it/LC_MESSAGES/: django.mo
locale/pl/LC_MESSAGES/: django.mo  django.po
locale/pt/LC_MESSAGES/: django.mo
locale/ru/LC_MESSAGES/: django.po
locale/sk/LC_MESSAGES/: django.mo  django.po
locale/tr/LC_MESSAGES/: django.mo  django.po
phonenumber_field/: __init__.py  admin.py  apps.py  formfields.py  modelfields.py  models.py  phonenumber.py  serializerfields.py  tests.py  validators.py  widgets.py
phonenumber_field/fields/models/: caseinsensitivecharfield.py
phonenumber_field/locale/ar/LC_MESSAGES/: django.po
phonenumber_field/locale/az/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/bg/LC_MESSAGES/: django.po
phonenumber_field/locale/bn/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/cs/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/da/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/de/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/eo/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/es/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/es_AR/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/fa/LC_MESSAGES/: django.po
phonenumber_field/locale/fi/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/fr/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/he/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/hu/LC_MESSAGES/: django.po
phonenumber_field/locale/hy/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/id/LC_MESSAGES/: django.po
phonenumber_field/locale/it/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/ko/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/lt/LC_MESSAGES/: django.po
phonenumber_field/locale/nb/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/nl/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/pl/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/pt/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/ro/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/ru/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/sk/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/sv/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/th/: django.mo  django.po
phonenumber_field/locale/tr/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/uk/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/uk_UA/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
phonenumber_field/locale/zh_Hant/LC_MESSAGES/: django.mo  django.po
phonenumber_field/management/commands/: autopopulate_phonenumber_field_models.py  populate_countries.py
phonenumber_field/migrations/: 0001_initial.py
phonenumber_field/templates/phonenumber_field/: format_phone_number_widget_output.html
phonenumber_field/templates/phonenumber_field/widgets/: phonenumber.html
phonenumber_field/tests/: __init__.py  models.py  test_cases.py
testproject/: manage.py
testproject/testapp/: forms.py  models.py  tests.py
testproject/testproject/: settings.py  urls.py  wsgi.py
tests/: forms.py  models.py  settings.py  test_formfields.py  test_phonenumber.py  test_serializers.py  test_widgets.py  tests.py
