[metadata]
name = django-phonenumber-field
version = attr: phonenumber_field.__version__
description = An international phone number field for django models.
long_description = file: README.rst
url = https://github.com/stefanfoulis/django-phonenumber-field
license = BSD
author = Stefan Foulis
author_email = stefan@foulis.ch
maintainer = Stefan Foulis
maintainer_email = stefan@foulis.ch
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.5
install_requires =
    babel
    Django >= 1.11.3
packages =
    phonenumber_field

[options.extras_require]
phonenumbers =
    phonenumbers >= 7.0.2
phonenumberslite =
    phonenumberslite >= 7.0.2

[flake8]
max-line-length = 88
show-source = True

[isort]
combine_as_imports = True
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = phonenumber_field
line_length = 88
multi_line_output = 3
