[metadata]
name = django-phonenumber-field
description = An international phone number field for django models.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/stefanfoulis/django-phonenumber-field
license = MIT
author = Stefan Foulis
author_email = stefan@foulis.ch
maintainer = Stefan Foulis
maintainer_email = stefan@foulis.ch
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.7
install_requires =
    Django >= 3.2

[options.extras_require]
phonenumbers =
    phonenumbers >= 7.0.2
phonenumberslite =
    phonenumberslite >= 7.0.2

[flake8]
max-line-length = 88
show-source = True
extend-exclude =
    .env/
    .venv/
    venv/

[isort]
profile = black
